# paper_gorbani_elobaid_2025_lcss_df_mpc-ironcub

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  data_driven_mpc.py  data_fused_mpc.py  testSimpleExample.cpp
src/apps/config/: configMujoco.toml  dd_mcp_config.xml  robot.toml
src/apps/configFolder/: ConfigFolderPath.h.in  simple-mpc-config.ini
src/cmake/: setup.in
src/flight-controller/: CMakeLists.txt
src/flight-controller/momentum-based-linear-mpc-lib/: CMakeLists.txt
src/flight-controller/momentum-based-linear-mpc-lib/bindings/python/: CMakeLists.txt  MPCPyBindings.cpp  PyIMPCProblem.h
src/flight-controller/momentum-based-linear-mpc-lib/include/IMPCProblem/: IMPCProblem.h  IQPUtilsMPC.h  systemDynamic.h
src/flight-controller/momentum-based-linear-mpc-lib/include/dataFusedMPC/: DFconstant.h  constraintsDFMPC.h  costsDFMPC.h  dataFusedMPC.h  systemDynamicsDFMPC.h
src/flight-controller/momentum-based-linear-mpc-lib/include/simpleExample/: SimpleExampleMPC.h  SimpleExampleconstant.h  constraintsSimpleExample.h  costsSimpleExample.h  systemDynamicsSimpleExample.h
src/flight-controller/momentum-based-linear-mpc-lib/src/IMPCProblem/: IMPCProblem.cpp  IQPUtilsMPC.cpp  systemDynamic.cpp
src/flight-controller/momentum-based-linear-mpc-lib/src/dataFusedMPC/: constraintsDFMPC.cpp  costsDFMPC.cpp  dataFusedMPC.cpp  systemDynamicsDFMPC.cpp
src/flight-controller/momentum-based-linear-mpc-lib/src/simpleExample/: SimpleExampleMPC.cpp  constraintsSimpleExample.cpp  costsSimpleExample.cpp  systemDynamicsSimpleExample.cpp
src/flight-controller/utils/: CMakeLists.txt
src/flight-controller/utils/bindings/: CMakeLists.txt
src/flight-controller/utils/bindings/python/: CMakeLists.txt  flightCtrlPyBindings.cpp  swig.h
src/flight-controller/utils/include/: FlightControlUtils.h  IQPConstraint.h  IQPCost.h  JetModel.h  QPInput.h  Robot.h  TrajectoryManager.h
src/flight-controller/utils/src/: FlightControlUtils.cpp  IQPConstraint.cpp  IQPCost.cpp  JetModel.cpp  QPInput.cpp  Robot.cpp  TrajectoryManager.cpp
src/mujoco_lib/: __init__.py  input_generator.py  ironcub_mujoco_simulator.py  jet_kalman_filter.py  nn_jet_model.py  pyproject.toml  robot_logging.py  single_jet_simulator.py
src/mujoco_lib/jet_model_torch/: model_7.pth
src/trajectories/: alphaGravity.mat  minimumJerkTrajectory.mat  stepTrajectory.mat
